[gd_scene load_steps=3 format=3 uid="uid://ca2jqh2tc7jix"]

[ext_resource type="Script" uid="uid://c2udx15le3kvv" path="res://overlays/overlay_keys.gd" id="1_tnj14"]
[ext_resource type="PackedScene" uid="uid://yvgf0ok5tp6r" path="res://overlays/overlay_keys_item.tscn" id="2_yi3d0"]

[node name="KeyOverlay" type="Control"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 320.0
script = ExtResource("1_tnj14")

[node name="ControlOffset" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -320.0
offset_right = 320.0
grow_vertical = 0

[node name="Control" type="Control" parent="ControlOffset"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -320.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlOffset/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 320.0
offset_bottom = 320.0
alignment = 2

[node name="ItemSample1" parent="ControlOffset/Control/VBoxContainer" instance=ExtResource("2_yi3d0")]
unique_name_in_owner = true
visible = false
layout_mode = 2
pressed_u = true
pressed_d = true
pressed_l = true
pressed_r = true
style_padding = Vector2i(8, -1)

[node name="ItemSample2" parent="ControlOffset/Control/VBoxContainer" instance=ExtResource("2_yi3d0")]
unique_name_in_owner = true
visible = false
layout_mode = 2
pressed_o = true
pressed_e = true
style_padding = Vector2i(8, -1)

[node name="ItemSample3" parent="ControlOffset/Control/VBoxContainer" instance=ExtResource("2_yi3d0")]
unique_name_in_owner = true
visible = false
layout_mode = 2
pressed_s = true
pressed_p = true
style_padding = Vector2i(8, -1)
